add sonar.properties 1

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -10,7 +10,8 @@ sonar.projectKey=my:project
 
 # Path is relative to the sonar-project.properties file. Defaults to .项目路径，相对的；
 #sonar.sources=.
-sonar.java.binaries=./target        # Java 项目，必填项目，必须包含 .class 字节码问件
+sonar.java.binaries=./target        
+# Java 项目，必填项目，必须包含 .class 字节码问件
 
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
